--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,21 @@ language: go
 
 go:
 - '1.11'
+- '1.12'
+- '1.13'
 
 env:
 - GO111MODULE=on
+- GOLANGCI_LINT_VERSION=1.21.0
 
 install:
-- GO111MODULE=off go get github.com/alecthomas/gometalinter
-- GO111MODULE=off gometalinter --install --force
+- wget -q https://github.com/golangci/golangci-lint/releases/download/v$GOLANGCI_LINT_VERSION/golangci-lint-$GOLANGCI_LINT_VERSION-linux-amd64.tar.gz -O /tmp/golangci-lint.tar.gz
+- tar --strip-components=1 -C $GOBIN -xzf /tmp/golangci-lint.tar.gz
 - go get github.com/mattn/goveralls
 
 script:
-- go mod vendor -v
-- GO111MODULE=off gometalinter --config=.gometalinter.json --deadline=10m .
-- go test -mod=readonly -v -coverprofile=profile.cov ./...
+- golangci-lint run --config .golangci.yml ./...
+- go test -mod=readonly -v -race -count=1 -cover -coverprofile=profile.cov ./...
 
 after_success:
 - goveralls -coverprofile=profile.cov -service=travis-ci
