--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -2,6 +2,8 @@ name: Lint and Test
 
 on: push
 
+permissions: {}
+
 jobs:
   lint-and-test:
 
@@ -9,6 +11,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
       - name: Set-up Go
         uses: actions/setup-go@v5
